--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 body {
     margin: 0;
-    background-color: #121016;
+    //background-color: #121016; auskommentiert da sonst dominierend für alles
 }
 
