angular material installiert

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,1 +1,4 @@
-<p>navigation works!</p>
+<app-navigation0-header></app-navigation0-header>
+<app-navigation1-threads></app-navigation1-threads>
+<app-navigation2-channels>  </app-navigation2-channels>
+<app-navigation3-direct-messages></app-navigation3-direct-messages>
