--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<mat-icon class="testIcon">home</mat-icon>
 <app-navigation>   </app-navigation>
 <app-channel></app-channel>
+
 <!-- Test pusch -->
