--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -2,3 +2,5 @@
 <app-navigation1-threads></app-navigation1-threads>
 <app-navigation2-channels>  </app-navigation2-channels>
 <app-navigation3-direct-messages></app-navigation3-direct-messages>
+<mat-icon>home</mat-icon>
+<mat-icon inline>ligature_icon</mat-icon>
