add material LoadMoreFlatNode

--- a/src/app/navigation-subcomponents/navigation2-channels/navigation2-channels.component.html
+++ b/src/app/navigation-subcomponents/navigation2-channels/navigation2-channels.component.html
@@ -1,1 +1,16 @@
-<p>navigation2-channels works!</p>
+<h2>Channels</h2>
+
+<span>
+    <mat-icon>chat</mat-icon> 
+    Allgemein
+    </span> <br>
+
+    <span>
+        <mat-icon>chat</mat-icon> 
+        Abgular
+        </span> <br>
+
+        <span>
+            <mat-icon>chat</mat-icon> 
+            HTML/CSS
+            </span> <br>
