--- a/src/app/navigation-subcomponents/navigation3-direct-messages/navigation3-direct-messages.component.html
+++ b/src/app/navigation-subcomponents/navigation3-direct-messages/navigation3-direct-messages.component.html
@@ -1,1 +1,16 @@
-<p>navigation3-direct-messages works!</p>
+<h2>Direktnachrichten</h2>
+
+<span>
+    <mat-icon>chat</mat-icon> 
+    Junus Ergin
+    </span> <br>
+
+    <span>
+        <mat-icon>chat</mat-icon> 
+        Manuel Thaler
+        </span> <br>
+
+        <span>
+            <mat-icon>chat</mat-icon> 
+            Mihai-Andrei Neascu
+            </span> <br>
