--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -2,5 +2,8 @@
 <app-navigation1-threads></app-navigation1-threads>
 <app-navigation2-channels>  </app-navigation2-channels>
 <app-navigation3-direct-messages></app-navigation3-direct-messages>
-<mat-icon>home</mat-icon>
-<mat-icon inline>ligature_icon</mat-icon>
+
+
+<span class="material-icons">
+    settings
+    </span>
