--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <mat-icon class="testIcon">home</mat-icon>
 <app-navigation>   </app-navigation>
 <app-channel></app-channel>
+<app-thread></app-thread>
 
 <!-- Test pusch -->
