--- a/src/app/thread/thread.component.scss
+++ b/src/app/thread/thread.component.scss
@@ -1,10 +1,16 @@
 .thread-container{
-  border: 2px solid blue;
   position: absolute;
-  top: 39px;
-  right: 0;
-  left: 767px;
+
+  right:0;
   bottom: 0;
+  width: 25vw;
+  height: 94vh;
+
+  // border: 2px solid blue;
+  background-color: rgba(0,0,0.8);
+
+
+
 
   p {
     text-align: center;
