--- a/src/app/channel/channel.component.html
+++ b/src/app/channel/channel.component.html
@@ -16,10 +16,7 @@
             <img src="assets/img/channel/user.png">
             <div class="chat-content">
                 <p> Max Mustermann <span>14:42 Uhr</span></p>
-                Hallo,
-                ich habe mein erstes Projekt beendet Wie lange dauert es, bis man für das nächste Modul freigeschaltet
-                wird? Ich wollte gleich in das nächste Modul starten, es ist für mich aber leider noch nicht geöffnet.
-                Vielen Dank schonmal für die Hilfe
+                Hallo, ich habe mein erstes Projekt beendet Wie lange dauert es, bis man für das nächste Modul freigeschaltet wird? Ich wollte gleich in das nächste Modul starten, es ist für mich aber leider noch nicht geöffnet. Vielen Dank schonmal für die Hilfe
             </div>
 
         </div>
@@ -28,10 +25,7 @@
             <img src="assets/img/channel/user.png">
             <div class="chat-content">
                 <p> Max Mustermann <span>14:42 Uhr</span></p>
-                Hallo,
-                ich habe mein erstes Projekt beendet Wie lange dauert es, bis man für das nächste Modul freigeschaltet
-                wird? Ich wollte gleich in das nächste Modul starten, es ist für mich aber leider noch nicht geöffnet.
-                Vielen Dank schonmal für die Hilfe
+                Hallo, ich habe mein erstes Projekt beendet Wie lange dauert es, bis man für das nächste Modul freigeschaltet wird? Ich wollte gleich in das nächste Modul starten, es ist für mich aber leider noch nicht geöffnet. Vielen Dank schonmal für die Hilfe
             </div>
         </div>
 
@@ -39,10 +33,7 @@
             <img src="assets/img/channel/user.png">
             <div class="chat-content">
                 <p> Max Mustermann <span>14:42 Uhr</span></p>
-                Hallo,
-                ich habe mein erstes Projekt beendet Wie lange dauert es, bis man für das nächste Modul freigeschaltet
-                wird? Ich wollte gleich in das nächste Modul starten, es ist für mich aber leider noch nicht geöffnet.
-                Vielen Dank schonmal für die Hilfe
+                Hallo, ich habe mein erstes Projekt beendet Wie lange dauert es, bis man für das nächste Modul freigeschaltet wird? Ich wollte gleich in das nächste Modul starten, es ist für mich aber leider noch nicht geöffnet. Vielen Dank schonmal für die Hilfe
             </div>
         </div>
 
@@ -50,10 +41,7 @@
             <img src="assets/img/channel/user.png">
             <div class="chat-content">
                 <p> Max Mustermann <span>14:42 Uhr</span></p>
-                Hallo,
-                ich habe mein erstes Projekt beendet Wie lange dauert es, bis man für das nächste Modul freigeschaltet
-                wird? Ich wollte gleich in das nächste Modul starten, es ist für mich aber leider noch nicht geöffnet.
-                Vielen Dank schonmal für die Hilfe
+                Hallo, ich habe mein erstes Projekt beendet Wie lange dauert es, bis man für das nächste Modul freigeschaltet wird? Ich wollte gleich in das nächste Modul starten, es ist für mich aber leider noch nicht geöffnet. Vielen Dank schonmal für die Hilfe
             </div>
         </div>
 
@@ -61,16 +49,13 @@
             <img src="assets/img/channel/user.png">
             <div class="chat-content">
                 <p> Max Mustermann <span>14:42 Uhr</span></p>
-                Hallo,
-                ich habe mein erstes Projekt beendet Wie lange dauert es, bis man für das nächste Modul freigeschaltet
-                wird? Ich wollte gleich in das nächste Modul starten, es ist für mich aber leider noch nicht geöffnet.
-                Vielen Dank schonmal für die Hilfe
+                Hallo, ich habe mein erstes Projekt beendet Wie lange dauert es, bis man für das nächste Modul freigeschaltet wird? Ich wollte gleich in das nächste Modul starten, es ist für mich aber leider noch nicht geöffnet. Vielen Dank schonmal für die Hilfe
             </div>
         </div>
 
 
 
     </div>
-
+    <app-chat></app-chat>
     <!-- Chat- component should be inserted here underneath -->
 </div>
