Co-authored-by: John Fieweger  <JohnTwiiX@users.noreply.github.com> Co-authored-by: RinatMadreiter <RinatMadreiter@users.noreply.github.com>

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,7 +1,11 @@
 <div class="chat-container">
 <div>
     <div>
-        
+        Hallo Welt
     </div>
+    <textarea></textarea>
+    <input [(ngModel)]="messageContent">
+    <button  (click)="sendMessage()">Senden</button>
+
 </div>
 </div>
