added new dialog-create-channel

--- a/src/app/navigation-subcomponents/navigation2-channels/navigation2-channels.component.html
+++ b/src/app/navigation-subcomponents/navigation2-channels/navigation2-channels.component.html
@@ -1,16 +1,18 @@
-<h2>Channels</h2>
+<div class="heading">
+    <h2>Channels</h2>
+    <mat-icon (click)="createChannel()" matTooltipClass="custom-tooltip" matTooltipPosition="above"  matTooltip="Channels hinzufügen">add</mat-icon>
+</div>
+<span>
+    <mat-icon>chat</mat-icon>
+    Allgemein
+</span> <br>
 
 <span>
-    <mat-icon>chat</mat-icon> 
-    Allgemein
-    </span> <br>
+    <mat-icon>chat</mat-icon>
+    Abgular
+</span> <br>
 
-    <span>
-        <mat-icon>chat</mat-icon> 
-        Abgular
-        </span> <br>
-
-        <span>
-            <mat-icon>chat</mat-icon> 
-            HTML/CSS
-            </span> <br>
+<span>
+    <mat-icon>chat</mat-icon>
+    HTML/CSS
+</span> <br>
