--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,7 @@
+
+@import '~@angular/material/prebuilt-themes/purple-green.css';
+
+
 body {
     margin: 0;
     //background-color: #121016; auskommentiert da sonst dominierend für alles
