added inputs in dialog

--- a/src/app/dialog-create-channel/dialog-create-channel.component.html
+++ b/src/app/dialog-create-channel/dialog-create-channel.component.html
@@ -1,1 +1,10 @@
-<p>dialog-create-channel works!</p>
+<mat-form-field appearance="outline">
+    <mat-label>Name</mat-label>
+    <input matInput placeholder="z.B. angular">
+</mat-form-field>
+
+<mat-form-field appearance="outline">
+    <mat-label>Beschreibung (optional)</mat-label>
+    <input matInput>
+    <mat-hint>Worum geht es in diesem Channel?</mat-hint>
+</mat-form-field>
