--- a/src/app/navigation-subcomponents/navigation2-channels/navigation2-channels.component.html
+++ b/src/app/navigation-subcomponents/navigation2-channels/navigation2-channels.component.html
@@ -1,6 +1,6 @@
 <div class="heading">
     <h2>Channels</h2>
-    <mat-icon (click)="createChannel()" matTooltipClass="custom-tooltip" matTooltipPosition="above"  matTooltip="Channels hinzufügen">add</mat-icon>
+    <mat-icon (click)="openCreateChannelDialog()" matTooltipClass="custom-tooltip" matTooltipPosition="above"  matTooltip="Channels hinzufügen">add</mat-icon>
 </div>
 <span>
     <mat-icon>chat</mat-icon>
