--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,11 +1,11 @@
 <div class="chat-container">
-<div>
     <div>
-        Hallo Welt
-    </div>
-    <textarea></textarea>
-    <input [(ngModel)]="messageContent">
-    <button  (click)="sendMessage()">Senden</button>
+        <div>
+            Hallo Welt
+        </div>
+        <textarea></textarea>
+        <input [(ngModel)]="message.content">
+        <button (click)="sendMessage()">Senden</button>
 
-</div>
+    </div>
 </div>
