thread component reworked

--- a/src/app/thread/thread.component.html
+++ b/src/app/thread/thread.component.html
@@ -1,5 +1,6 @@
-
 <div class="thread-container">
-  <p>thread works!</p>
+  <h2>Thread <span class="fond-style">gruppenarbeit-238-slack</span></h2>    
+  <app-thread-person></app-thread-person>  
 </div>
+
 
