--- a/src/app/thread/thread.component.scss
+++ b/src/app/thread/thread.component.scss
@@ -1,20 +1,26 @@
-.thread-container{
+.thread-container {
   position: absolute;
-
   right:0;
   bottom: 0;
   width: 25vw;
   height: 94vh;
-
-  // border: 2px solid blue;
-  background-color: rgba(0,0,0.8);
-
-
-
-
-  p {
-    text-align: center;
+  
+  h2 {
+    height: 7%;
+    display: flex;
+    align-items: center;
+    padding: 0 20px;
+    border: 1px solid rgb(182, 179, 179);
+    margin: 0;
   }
 
-  
+  .fond-style{
+    padding-left: 12px;
+    color:rgb(0, 0, 0,0.5);
+    font-size: 18px;
+  }
+
+
+ 
 }
+
