Co-authored-by: RinatMadreiter <RinatMadreiter@users.noreply.github.com>

--- a/src/app/navigation-subcomponents/navigation2-channels/navigation2-channels.component.html
+++ b/src/app/navigation-subcomponents/navigation2-channels/navigation2-channels.component.html
@@ -2,7 +2,7 @@
     <h2>Channels</h2>
     <mat-icon (click)="openCreateChannelDialog()" matTooltipClass="custom-tooltip" matTooltipPosition="above"  matTooltip="Channels hinzufügen">add</mat-icon>
 </div>
-<span>
+<span (click)="openChannel()">
     <mat-icon>chat</mat-icon>
     Allgemein
 </span> <br>
