--- a/src/app/channel/channel.component.html
+++ b/src/app/channel/channel.component.html
@@ -12,46 +12,9 @@
 
     <div class="chat-sub-container">
 
-        <div class="single-chat">
-            <img src="assets/img/channel/user.png">
-            <div class="chat-content">
-                <p> Max Mustermann <span>14:42 Uhr</span></p>
-                Hallo, ich habe mein erstes Projekt beendet Wie lange dauert es, bis man für das nächste Modul freigeschaltet wird? Ich wollte gleich in das nächste Modul starten, es ist für mich aber leider noch nicht geöffnet. Vielen Dank schonmal für die Hilfe
-            </div>
+        <app-single-thread></app-single-thread>
+    
 
-        </div>
-
-        <div class="single-chat">
-            <img src="assets/img/channel/user.png">
-            <div class="chat-content">
-                <p> Max Mustermann <span>14:42 Uhr</span></p>
-                Hallo, ich habe mein erstes Projekt beendet Wie lange dauert es, bis man für das nächste Modul freigeschaltet wird? Ich wollte gleich in das nächste Modul starten, es ist für mich aber leider noch nicht geöffnet. Vielen Dank schonmal für die Hilfe
-            </div>
-        </div>
-
-        <div class="single-chat">
-            <img src="assets/img/channel/user.png">
-            <div class="chat-content">
-                <p> Max Mustermann <span>14:42 Uhr</span></p>
-                Hallo, ich habe mein erstes Projekt beendet Wie lange dauert es, bis man für das nächste Modul freigeschaltet wird? Ich wollte gleich in das nächste Modul starten, es ist für mich aber leider noch nicht geöffnet. Vielen Dank schonmal für die Hilfe
-            </div>
-        </div>
-
-        <div class="single-chat">
-            <img src="assets/img/channel/user.png">
-            <div class="chat-content">
-                <p> Max Mustermann <span>14:42 Uhr</span></p>
-                Hallo, ich habe mein erstes Projekt beendet Wie lange dauert es, bis man für das nächste Modul freigeschaltet wird? Ich wollte gleich in das nächste Modul starten, es ist für mich aber leider noch nicht geöffnet. Vielen Dank schonmal für die Hilfe
-            </div>
-        </div>
-
-        <div class="single-chat">
-            <img src="assets/img/channel/user.png">
-            <div class="chat-content">
-                <p> Max Mustermann <span>14:42 Uhr</span></p>
-                Hallo, ich habe mein erstes Projekt beendet Wie lange dauert es, bis man für das nächste Modul freigeschaltet wird? Ich wollte gleich in das nächste Modul starten, es ist für mich aber leider noch nicht geöffnet. Vielen Dank schonmal für die Hilfe
-            </div>
-        </div>
 
 
 
@@ -59,3 +22,24 @@
     <app-chat></app-chat>
     <!-- Chat- component should be inserted here underneath -->
 </div>
+
+
+
+<!-- hamsterbook tutorial card for loop -->
+
+<!-- <div class="flexrow">
+    <div class="container">
+      <app-friend-box></app-friend-box>
+      <app-dog-card *ngFor="let i of [0,1,2,3,4,5]" [imgSrc]="postImgs[i]" [text]="postTexts[i]">
+      </app-dog-card>
+    </div>
+  
+    <app-proposals></app-proposals>
+  </div> -->
+
+  <!-- 
+    Todos:
+    1) Thread Komponente erstellen
+    2) Channel component aktualisieren & mit input Variablen füllen
+
+   -->
