added new message to the allThreads[]

--- a/src/app/channel/channel.component.html
+++ b/src/app/channel/channel.component.html
@@ -12,11 +12,9 @@
 
     <div class="chat-sub-container">
 
-        <app-single-thread></app-single-thread>
+        <app-single-thread ></app-single-thread>
+        <!-- <app-dog-card *ngFor="let i of [0,1,2,3,4,5]" [imgSrc]="postImgs[i]" [text]="postTexts[i]"></app-dog-card> -->
     
-
-
-
 
     </div>
     <app-chat></app-chat>
