--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -3,7 +3,7 @@
         <div>
             Hallo Welt
         </div>
-        <input [(ngModel)]="message.content">
+        <input [(ngModel)]="threadContent">
         <button (click)="sendMessage()">Senden</button>
 
     </div>
