--- a/src/app/dialog-create-channel/dialog-create-channel.component.html
+++ b/src/app/dialog-create-channel/dialog-create-channel.component.html
@@ -24,7 +24,7 @@
         </mat-form-field>
       </li>
     <li>
-      <button mat-raised-button >Abbrechen</button>
+      <button mat-raised-button (click)="onNoClick()" >Abbrechen</button>
       <button mat-raised-button (click)="createChannel()" >Erstellen</button>
     </li>
 
