push messages möglich

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -5,7 +5,7 @@
             <div class="tools">
                 verschiedene Tools
             </div>
-            <textarea [(ngModel)]="msg.content"></textarea>
+            <textarea [(ngModel)]="typedMessage"></textarea>
             <button (click)="sendMessage()">Senden</button>
         </div>
 
