--- a/src/app/channel/channel.component.scss
+++ b/src/app/channel/channel.component.scss
@@ -28,6 +28,26 @@ h2 {
     }
 }
 
+.single-chat {
+    display: flex;
+    padding: 8px 20px;
+    color: white;
+
+    img {
+        width: 36px;
+        height: 36px;
+        background-color: lightblue;
+        border-radius: 6px;
+    }
+
+    .chat-content {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        margin-left: 5px;
+    }
+}
+
 .channel-topbar {
     height: 7%;
     display: flex;
