--- a/src/app/thread-answer/thread-answer.component.html
+++ b/src/app/thread-answer/thread-answer.component.html
@@ -1,8 +1,25 @@
 <div class="commentaries" *ngFor="let message of ts.allThreadAnswers; let i = index">
   <img src="assets/img/thread/user-24.png"/>
   {{message}}
+
+  <mat-toolbar *ngIf="showToolBar"  class="toolbar-appear">
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <span>My App</span>
+    <span class="example-spacer"></span>
+    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+      <mat-icon>favorite</mat-icon>
+    </button>
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+      <mat-icon>share</mat-icon>
+    </button>
+  </mat-toolbar>
+
+
+
   
-  <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+ <!--  <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
     <mat-icon>more_vert</mat-icon>
   </button>
   <mat-menu #menu="matMenu">
@@ -18,7 +35,7 @@
       <mat-icon>notifications_off</mat-icon>
       <span>Disable alerts</span>
     </button>
-  </mat-menu>
+  </mat-menu> -->
   
 
 </div>
