--- a/src/app/thread-answer/thread-answer.component.scss
+++ b/src/app/thread-answer/thread-answer.component.scss
@@ -1,9 +1,10 @@
-.commentaries{   
-  margin-top: 16px;
-  margin-bottom: 16px;
-  padding-left: 32px;
-  padding-right: 16px;
-
+/* .commentaries { 
+  height: 50px;  
+  position: relative;
+  padding-top: 12px;
+  padding-left: 16px;  
+  
+  
   img {
     width: 36px;
     height: 36px;
@@ -13,6 +14,64 @@
 
   &:hover {
     cursor: pointer ;
-    background-color: rgba(0,0,0,0.1);
+    background-color: rgba(0,0,0,0.05);    
+  }  
+}
+
+.mat-toolbar {
+  background-color: white;
+  color: black;
+  height: 34px;
+  border-radius: 20px;
+  width: fit-content;
+  position: absolute;
+  top: 10px;
+  right: 22px;
+}
+
+.fondStyle1{
+  padding-left: 12px;
+  font-size: 20px;
+  font-weight: bold;    
+}
+
+.fondStyle2{
+  padding-left: 6px;
+  font-size: 14px;    
+  padding-top: 5px;    
+}
+
+.textStyle {
+  margin: 0;
+  padding-left: 12px;
+} */
+
+.commentaries{
+  display: flex;
+  padding: 0 20px;
+  box-shadow: 1px 1px 1px rgb(0, 0, 0,0.2);  
+   
+  img {
+    width: 36px;
+    height: 36px;
+    border-radius: 20%;
+    object-fit: cover;
+  }
+
+  .fondStyle1{
+    padding-left: 12px;
+    font-size: 20px;
+    font-weight: bold;    
+  }
+
+  .fondStyle2{
+    padding-left: 6px;
+    font-size: 14px;    
+    padding-top: 5px;    
+  }
+
+  .textStyle {
+    margin: 0;
+    padding-left: 12px;
   }
 }
