--- a/src/app/thread-person/thread-person.component.html
+++ b/src/app/thread-person/thread-person.component.html
@@ -1,4 +1,9 @@
 <div class="commentaries">
   <img src="assets/img/thread/user-24.png" />
-  Hans Meier 17. Juni um 22:58 Uhr
+  <div class="dateStyle">
+    <div>
+      <span class="fondStyle1">Hans Meier</span><span class="fondStyle2">17. Juni um 22:58 Uhr</span>
+    </div>
+    <p class="textStyle">Text Text</p>
+  </div>    
 </div>
