thread css reworked

--- a/src/app/thread-answer/thread-answer.component.html
+++ b/src/app/thread-answer/thread-answer.component.html
@@ -1,4 +1,4 @@
-<div (mouseover)="setShowToolBar(true)" (mouseleave)="setShowToolBar(false)" >
+<div class="treadContainer"  (mouseover)="setShowToolBar(true)" (mouseleave)="setShowToolBar(false)" >
  
   <div class="commentaries" >
     <img src="assets/img/thread/user-24.png" />
