--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -3,9 +3,9 @@
 
         <div class="chat-box">
             <div class="tools">
-            
+
             </div>
-            <textarea [(ngModel)]="typedMessage"></textarea>
+            <textarea [(ngModel)]="msg.content"></textarea>
             <button (click)="sendMessage()">Senden</button>
         </div>
 
